# ising-dynamics

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  domain.h  ising.cpp  ising4.2.cpp  ising4.3.cpp  ising4.4.cpp  ising4.cpp  ising_config.h  lattice.h  lattice1.2.h  parameters.toml  parameters_ising4.4.toml  square_lattice.h  square_lattice1.2.h  square_lattice1.3.h
tool/: calculate_array_average.py  make-input.py  plot_ising_square.py  plot_spin_structure_factor_square.py  postprocess.py
