#add_executable(ising ising.cpp)
#target_link_libraries(ising ${LIBS})

#add_executable(ising4 ising4.cpp)
#target_link_libraries(ising4 ${LIBS})

#add_executable(ising4.2 ising4.2.cpp)
#target_link_libraries(ising4.2 ${LIBS})

#add_executable(ising4.3 ising4.3.cpp)
#target_link_libraries(ising4.3 ${LIBS})

add_executable(ising4.4 ising4.4.cpp)
target_link_libraries(ising4.4 ${LIBS})
